Scheme Creation + Repository Pattern

--- a/PermissionRequestApp/PermissionRequestApp/appsettings.json
+++ b/PermissionRequestApp/PermissionRequestApp/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default": "Server=PRACTIAARNB990\\SQLEXPRESS;Database=PermissionRequestDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
