--- a/PermissionRequestApp/PermissionRequestApp/PermissionRequestApp.csproj
+++ b/PermissionRequestApp/PermissionRequestApp/PermissionRequestApp.csproj
@@ -6,7 +6,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="VueCliMiddleware" Version="3.0.0" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="VueCliMiddleware" Version="3.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PermissionRequestApp.Entities\PermissionRequestApp.Entities.csproj" />
+    <ProjectReference Include="..\PermissionRequestApp.Repository\PermissionRequestApp.Repository.csproj" />
   </ItemGroup>
 
 
