--- a/PermissionRequestApp/PermissionRequestApp.Contracts/PermissionRequestApp.Contracts.csproj
+++ b/PermissionRequestApp/PermissionRequestApp.Contracts/PermissionRequestApp.Contracts.csproj
@@ -1,13 +1,8 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Folder Include="ResponseDTO\" />
-    <Folder Include="RequestDTO\" />
-  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\PermissionRequestApp.Entities\PermissionRequestApp.Entities.csproj" />
