--- a/PermissionRequestApp/PermissionRequestApp/PermissionRequestApp.csproj
+++ b/PermissionRequestApp/PermissionRequestApp/PermissionRequestApp.csproj
@@ -7,16 +7,22 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.8">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.1.8" />
     <PackageReference Include="VueCliMiddleware" Version="3.1.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\PermissionRequestApp.Entities\PermissionRequestApp.Entities.csproj" />
+    <ProjectReference Include="..\PermissionRequestApp.LoggerService\PermissionRequestApp.LoggerService.csproj" />
     <ProjectReference Include="..\PermissionRequestApp.Repository\PermissionRequestApp.Repository.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="clientapp\src\router\" />
   </ItemGroup>
 
 
