--- a/PermissionRequestApp/PermissionRequestApp/clientapp/package.json
+++ b/PermissionRequestApp/PermissionRequestApp/clientapp/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap-vue": "^2.17.0",
     "core-js": "^3.4.3",
     "vue": "^2.6.10"
   },
