--- a/PermissionRequestApp/PermissionRequestApp/nlog.config
+++ b/PermissionRequestApp/PermissionRequestApp/nlog.config
@@ -3,11 +3,11 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
       internalLogLevel="Trace"
-      internalLogFile="d:Projects\Blog-AccountOwner\Project\internal_logs\internallog.txt">
+      internalLogFile="c:Projects\internal_logs\internallog.txt">
 
   <targets>
     <target name="logfile" xsi:type="File"
-            fileName="d:/Projects/Blog-AccountOwner/Project/logs/${shortdate}_logfile.txt"
+            fileName="c:/Projects/logs/${shortdate}_logfile.txt"
             layout="${longdate} ${level:uppercase=true} ${message}"/>
   </targets>
 
